# edurouter

./: .gitignore  API_REFERENCE.md  Cargo.toml  Dockerfile  EMBEDDINGS.md  EMBED_IMPL.md  IMPLEMENTATION.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.e2e.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-crates-io.yml  publish-ghcr.yml
configs/: canonical_tasks.json  catalog.json  policy.json
configs/overlays/: assessment-mode.txt  troubleshoot-first.txt
e2e/: Dockerfile  runner.py
python_tests/: chat_router_demo.py  generate_api_key.py  main.py  pyproject.toml  test_embedding_routing.py  test_openai_models.py
scripts/: run_e2e.sh
src/: api.rs  cache.rs  config.rs  embedding.rs  engine.rs  errors.rs  health.rs  lib.rs  main.rs  rate.rs  stickiness.rs  types.rs
tests/: contract.rs
