[package]
name = "router"
version = "0.1.0"
edition = "2021"
authors = ["LABIIUM"]
description = "Chat2Response-compatible routing service"
license = "MIT"

[dependencies]
actix-web = { version = "4.5", features = ["macros"] }
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = { version = "3.8", features = ["macros", "hex"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "parking_lot"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "5"
parking_lot = "0.12"
smallvec = "1.13"
moka = { version = "0.12", features = ["future"] }
arc-swap = "1.6"
ahash = "0.8"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
bitflags = "2.4"
hex = "0.4"
dotenvy = "0.15"
regex = "1.10"
